[package]
name = "upnp-wan-exporter-rs"
version = "0.1.0"
edition = "2021"
description = "A Prometheus exporter for router traffic metrics via UPnP"
license = "MIT"
repository = "https://github.com/your-username/upnp-wan-exporter-rs"
keywords = ["upnp", "prometheus", "exporter", "router", "metrics"]
categories = ["network-programming", "web-programming"]

[[bin]]
name = "upnp-wan-exporter-rs"
path = "src/bin/upnp-wan-exporter-rs.rs"

[lib]
name = "upnp_wan_exporter_rs"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["net", "time", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.11"
xml-rs = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus = "0.13"
lazy_static = "1.4"
toml = "0.8"

[profile.release]
# Enable link-time optimization for smaller binary
lto = true
# Use fewer code generation units for better optimization
codegen-units = 1
# Enable panic = abort to reduce binary size
panic = "abort"
# Strip symbols from binary
strip = true
# Optimize for size instead of speed
opt-level = "z"
